          CHANGES IN SOUNDGEN VERSION 1.8.1.9000 [...date...]
NEW FUNCTIONS:
  * addAM(): adds amplitude modulation to a sound

MINOR:
  * soundgen(): new argument "amType" for sinusoidal or logistic amplitude modulation

BUGS FIXED:
  * formant_app(): doesn't crash when appending annotations


          CHANGES IN SOUNDGEN VERSION 1.8.1 [18-September-2020]
MINOR
  * soundgen(), getSpectralEnvelope(): a more consisent implementation of zero-pole models, which affects manually specified formant amplitudes. Check your old code!
  * soundgen(), getSpectralEnvelope(): formantDepStoch is now treated as a multiplication factor instead of dB (0 = no formant, 1 = default amplitude). Check your old code!
  * soundgen(): updated list of tempEffects
  * soundgen(): modified smoothing and trend of random walks, eg when generating nonlinear effects stochastically
  * fade(), crossFade(): new defaults of steepness values, added gaussian shape
  * estimateVTL(), schwa(), formant_app(): a new argument "interceptZero" for controlling whether the regression line is forced to pass through the origin
  * analyze(): cutFreq can be a vector of length 2 - eg cutFreq = c(100, 8000) - to produce spectral descriptives from a particular range of frequencies
  * analyze(): a new argument "voicedSeparate" - if TRUE (default), most descriptors are returned separately for the entire sound and only for voiced frames. This removes ambiguities in earlier versions, where some variables were silently set to NA for unvoiced frames.

BUGS FIXED:
  * soundgen(): correct timing of glottis anchors
  * soundgen(): invalidArgAction = 'ignore' overrides inbuilt limits of AM parameters
  * soundgen_app(): correct parsing of long formant lists
  * pitch_app(): spectrogram plot responds to change in input settings
  * formant_app(): doesn't crash when changing VTL settings
  * analyze(), analyzeFolder(): correct plotting with ylim under 1 kHz


          CHANGES IN SOUNDGEN VERSION 1.8.0 [11-August-2020]