@@ -7,6 +7,7 @@ MINOR:
 
 BUGS FIXED:
   * formant_app(): doesn't crash when appending annotations
+  * pitch_app(), formant_app(): fixed incompletely plotted oscillogram
 
 
           CHANGES IN SOUNDGEN VERSION 1.8.1 [18-September-2020]
